fixed scale effect on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -541,6 +541,12 @@
         .load-more {
           width: 65%;
         }
+        .poki-wrapper .poki-info img {
+          &:hover {
+            transform: unset;
+            transform: scale(1.1);
+          }
+        }
       }
     }
   }
